--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,31 @@
-:root {
+:root 
+{
     --maincolor: rgb(0, 0, 0);
     --secondarycolor: #37B7ED;
     --shadowcolor: black;
     --secondaryshadowcolor: #37B7ED;
-
+    --gradientcolor1: #090744;
+    --gradientcolor2: #a20070;
+    --gradientcolor3: #090744;
     --textcolor: white;
     --secondarytextcolor: black;
     --captionbackground: white;
     --captiontextcolor: black;
+}
 
+body, nav,main, .jumbotron
+{
+    background: var(--gradientcolor1);
+    background: linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor2) 59%, var(--gradientcolor3) 100%) ;
 }
 
 * {
     scroll-behavior: smooth;
-    font-family: Raleway, 'Mulish', 'Open Sans', 'Verdana', 'Arial';
+    font-family: 'Questrial', 'Mulish', 'Open Sans', 'Verdana', 'Arial';
     margin: 0px;
     padding: 0px;
 }
 
-main {
-    background-color: var(--maincolor);
-}
 
 .page-section {
     color: var(--textcolor);
@@ -28,12 +33,12 @@ main {
 
 /*nav bar menu*/
 nav {
-    background-color: var(--maincolor);
     position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     border-bottom: 2px solid var(--secondarycolor);
 
 }
@@ -42,8 +47,10 @@ nav {
 ul {
     list-style-type: none;
     display: flex;
-    justify-content: space-around;
-    margin-right: 30%;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin: auto;
 
 }
 
@@ -53,34 +60,35 @@ li a {
     list-style-type: none;
     display: flex;
     font-weight: bolder;
-    margin: 20px;
+    margin-right: 70px;
     text-decoration: none;
-    color: var(--secondarycolor);
+    color: var(--textcolor);
     width: fit-content;
 }
 
 /*hover in the links nav menu items*/
-li a:hover {
+li a:hover 
+{
     background-color: var(--secondarycolor);
     color: var(--maincolor);
     border-radius: 5%;
-
-
 }
 
 /*defining style for the logo area in the left side of the nav, in this case my name*/
-.logo {
-    background-color: var(--secondarycolor);
-    color: var(--maincolor);
-    padding-right: 25px;
-    padding-left: 10px;
+.logo 
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
     text-align: center;
 }
 
 /*defining style for the text in my logo in this case my name*/
 #myNameinNav {
-    margin-left: 10px;
-    margin-top: 10%;
+    /* margin-left: 10px;
+    margin-top: 10%; */
+    margin: auto;
     text-align: center;
     font-family: Unbounded, 'Raleway', 'Mulish', 'Open Sans', 'Arial';
     font-weight: bold;
@@ -92,16 +100,19 @@ li a:hover {
 /*defining grid areas and size*/
 .intro {
     padding-top: 10%;
-    display: grid;
-    justify-content: center;
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items:center;
+    /* grid-template-rows: auto;
     grid-template-columns: 20% 80%;
-    grid-template-areas: 'introAside introArticle';
-    background-color: var(--maincolor);
+    grid-template-areas: 'introAside introArticle'; */
+    /* background-color: var(--maincolor); */
     margin-left: 20%;
 }
 
-#introAside {
+#introAside 
+{
     grid-area: introAside;
     margin-left: 4%;
     color: var(--textcolor);
@@ -113,11 +124,10 @@ li a:hover {
     margin-left: 10%;
     margin-right: 10%;
     grid-area: introArticle;
-    color: var(--textcolor);
+    color: var(--secondarytextcolor);
     width: fit-content;
-    font-family: Mulish, 'Unbounded', 'Open Sans';
-    box-shadow: 0px 0px 20px var(--secondarycolor);
     border-radius: 5px;
+    border: 3px dotted var(--textcolor);
     display: flex;
 
 }
@@ -129,7 +139,7 @@ li a:hover {
 
 /*For spacing of the text inside the box*/
 #introText {
-    margin-top: 7%;
+    /* margin-top: 7%; */
     text-align: justify;
     align-items: center;
     margin-left: 5%;
@@ -410,13 +420,14 @@ li a:hover {
     /*nav bar menu for tablet*/
     nav
     {
-        background-color: var(--maincolor);
+        background-image: inherit;
+        background-color: none;
         position: fixed;
         display: flex;
         justify-content: space-between;
         width: 100%;
         overflow: hidden;
-        border-bottom: 2px solid var(--secondarycolor);
+        /* border-bottom: 2px solid var(--secondarycolor); */
 
     }
 
