--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@
     --captiontextcolor: black;
 }
 
-body, nav,main, .jumbotron
+body, nav,main, .jumbotron, #projectcaption
 {
     background: var(--gradientcolor1);
     background: linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor2) 59%, var(--gradientcolor3) 100%) ;
@@ -203,7 +203,7 @@ li a:hover
 
 /*border for aside of aboutme,work, project, resume, contactme*/
 .asideBorder {
-    border-right: 4px solid var(--secondarycolor);
+    /* border-right: 3px solid var(--textcolor); */
     display: flex;
     margin-right: 15%;
 }
@@ -241,9 +241,11 @@ li a:hover
         'project4 project5';    /*3rd row*/
 }
 
-.projects {
+.projects 
+{
     margin: 5px;
     cursor: pointer;
+    box-shadow: 0px 5px 25px var(--textcolor);
     transition: box-shadow 0.8s;
 }
 
@@ -252,9 +254,6 @@ li a:hover
     text-decoration: none;
 }
 
-.projects:hover {
-    box-shadow: -4px 3px 3px var(--secondarycolor);
-}
 
 #project1 {
     grid-area: project1;
@@ -296,14 +295,16 @@ li a:hover
 /*Project Caption*/
 #projectcaption {
     align-items: left;
-    padding: 10px;
-    margin-top: 7%;
-    background-color: var(--maincolor);
-    color: var(--secondarycolor);
-    width: fit-content;
+    /* padding: 5px; */
+    margin-top: auto;
+    /* background: linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor2) 59%, var(--gradientcolor3) 100%) ; */
+    color: var(--textcolor);
+    width: 100%;
+    height: 20%;
     text-align: left;
-    border: 2px solid var(--secondarycolor);
+    border: 2px solid var(--textcolor);
     border-left: none;
+    border-top: none;
     transition: transform 0.9s;
 }
 
@@ -335,21 +336,6 @@ li a:hover
     text-align: center;
 
 }
-
-/* .articleContactMe {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto;
-    grid-template-areas:
-        'call'
-        /*1st row*/
-        'email'
-        /*2nd row*/
-        'linkedin';
-    /*3rd row*/
-    grid-gap: 4em;
-
-} */
 
 /*Defining Grid Area for the Icons to be used in media for mobile and tablets */
 .call {
