--- a/styles/style.css
+++ b/styles/style.css
@@ -271,10 +271,11 @@ li a:hover
 
 #project3 {
     grid-area: project3;
-    background-image: url("../images/02-portfolio-3.jpg");
+    
     width: inherit;
     height: auto;
 }
+
 
 #project4 {
     grid-area: project4;
@@ -294,12 +295,13 @@ li a:hover
 /*Project Caption*/
 #projectcaption {
     align-items: left;
-    padding: 7px;
-    margin: auto;
-    /* background: linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor2) 59%, var(--gradientcolor3) 100%) ; */
+    /* padding: 7px; */
+    /* background-color; */
+    margin: none;
+    background-color: ;
     color: var(--textcolor);
     width: 100%;
-    height: 20%;
+    height: max-content;
     text-align: left;
     border-bottom: 2px solid var(--textcolor);
     transition: transform 0.9s;
