--- a/styles/style.css
+++ b/styles/style.css
@@ -476,8 +476,7 @@ li a:hover
 footer
 {
     display: grid;
-    align-items: center;
-    justify-content: center;
+   
     color: var(--textcolor);
     /* margin-bottom: 4%; */
     border-top: 2px solid var(--textcolor);
@@ -487,13 +486,13 @@ footer
 {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 
 }
 .footerbtn
 {
-    background-color: white;
+    background-color: none;
 }
 .footerbtn:hover
 {
@@ -639,23 +638,6 @@ footer
     .projects:hover
     {
         box-shadow: none
-    }
-
-    /* Defining the grid layout as rows for Tablet*/
-    #projectsGrid 
-    {
-        display: grid;
-        margin-left: -20%;
-        margin-right: -20%;
-        grid-template-rows: auto;
-        grid-template-columns: auto;
-        grid-template-areas:
-        'project1' 
-        'project2'
-        'project3' 
-        'project4' 
-        'project5';       
-        grid-gap: 1em;
     }
 
 
