--- a/styles/style.css
+++ b/styles/style.css
@@ -488,18 +488,31 @@ footer
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    margin: 2%;
 
 }
-.footerbtn
+.btn-light, .btn-light a
 {
-    background-color: none;
+    background:linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor1) 59%, var(--gradientcolor2) 100%) ;
+    /* border: 2px solid var(--textcolor); */
+    color: var(--textcolor);
+    text-decoration: none;
 }
-.footerbtn:hover
+
+.btn-light:hover
 {
     background-color: var(--textcolor);
-    box-shadow: 0px 0px 0px 20px var(--textcolor);
+    box-shadow: 0px 0px 20px var(--textcolor);
 }
 
+.rights
+{
+    margin: 2%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 /*Style for tablets*/
 @media screen and (max-width:768px) 
 {
