changed flex direction to column for rights class in footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -509,7 +509,7 @@ footer
 {
     margin: 2%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
