--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,10 @@ li a:hover
     grid-template-columns: 20% 80%;
     grid-template-rows: auto;
     grid-template-areas: 'aboutMeAside aboutMeArticle';
-    margin-top: 5%;
+    margin-top: 10%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
 
 }
 
@@ -189,22 +192,15 @@ li a:hover
 }
 
 /*Defining About me 2nd column Grid Area*/
-#aboutMeArticle {
-    grid-area: aboutMeArticle;
+#aboutMeArticle 
+{
+    grid-area: aboutMeArticle; 
     justify-content: center;
     align-items: center;
-    margin-left: 5%;
-    margin-top: 0.5vh;
     text-align: justify;
-    margin-right: 8%;
-}
-
-/*border for aside of aboutme,work, project, resume, contactme*/
-.asideBorder {
-    /* border-right: 3px solid var(--textcolor); */
-    display: flex;
-    margin-right: 15%;
+    font-size: smaller;
     font-weight: bolder;
+
 }
 
 /* Projects/Work grid of 2 columns*/
@@ -393,13 +389,13 @@ li a:hover
 
 
 /*Contact Me Grid */
-#contactMeGrid {
+/* #contactMeGrid {
     display: grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: auto;
     grid-template-areas: 'asideContactMe articleContactMe';
     margin-top: 10%;
-}
+} */
 
 #asideContactMe {
     grid-area: asideContactMe;
@@ -410,14 +406,17 @@ li a:hover
 .articleContactMe {
     grid-area: articleContactMe;
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
     text-decoration: none;
     text-align: center;
-    
-
 }
 
+.contactIcons:hover
+{
+    
+}
 /*Defining Grid Area for the Icons to be used in media for mobile and tablets */
 .call {
     grid-area: call;
@@ -478,10 +477,13 @@ footer
     display: grid;
    
     color: var(--textcolor);
-    /* margin-bottom: 4%; */
-    border-top: 2px solid var(--textcolor);
+    margin-bottom: 2%;
+    border-top: 1px solid var(--textcolor);
 }
-
+#footerCol
+{
+    margin-top: 5%;
+}
 .footerbtnContainer
 {
     display: flex;
