--- a/styles/style.css
+++ b/styles/style.css
@@ -182,6 +182,10 @@ li a:hover
 
 }
 
+.borderBottom
+{
+    border-bottom: 2px solid var(--textcolor);
+}
 
 .contactMeBtn
 {
@@ -444,7 +448,6 @@ li a:hover
     align-items: center;
     justify-content: center;
     color: var(--textcolor);
-    /* margin-top: 10%; */
 }
 
 .articleContactMe a {
@@ -508,6 +511,12 @@ footer
     margin-top: 5%;
 }
 
+#contactLabel
+{
+    align-items: center;
+    justify-content: center;
+}
+
 .footerbtnContainer
 {
     display: flex;
@@ -519,15 +528,17 @@ footer
 }
 .footerBtn, .footerBtn a
 {
-    background:linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor1) 59%, var(--gradientcolor2) 100%) ;
+    
     /* border: 2px solid var(--textcolor); */
+    background-color: transparent;
     color: var(--textcolor);
     text-decoration: none;
+    
 }
 
-.btn-light:hover
+.footerBtn:hover
 {
-    background-color: var(--textcolor);
+    background:linear-gradient(90deg ,var(--gradientcolor1) 0%, var(--gradientcolor1) 59%, var(--gradientcolor2) 100%) ;
     box-shadow: 0px 0px 20px var(--textcolor);
 }
 
