--- a/styles/style.css
+++ b/styles/style.css
@@ -233,16 +233,6 @@ li a:hover
 
 }
 
-.getInTouchBtn
-{
-    background-color: var(--textcolor);
-}
-
-.getInTouchBtn:hover
-{
-
-}
-
 /* Projects/Work grid of 2 columns*/
 #workGrid 
 {
@@ -332,7 +322,11 @@ li a:hover
     height: auto;
 }
 
-
+.card a
+{
+    text-decoration: none;
+    color: var(--textcolor);
+}
 
 .card-title, .card-footer 
 {   
@@ -341,30 +335,26 @@ li a:hover
 }
 
 
-.card-body
-{
-    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
-}
-
 
 /*Project Caption*/
 #projectcaption 
 {
     
     margin: none;
-    /* background-color: white ; */
-    /* color: var(--textcolor); */
     width: 100%;
     height: max-content;
-    text-align: left;
-    border-bottom: 2px solid var(--textcolor);
+
 }
 
-#projectcaption > h2 , h5
+#projectcaption > h2 , h5, h6 
 {
     margin-left: 2%;
 }
 
+.title-bg
+{
+    margin-left: 5%;
+}
 /* Skills Grid */
 #skillsGrid
 {
